--- a/root/jekyll/_layouts/programs-layout.html
+++ b/root/jekyll/_layouts/programs-layout.html
@@ -3,7 +3,7 @@
 
 <head>
     {% include collection-head.html %}
-<link href="../site.b5a764a4b61fd8c787ab.min.css" rel="stylesheet"></head>
+<link href="../site.7c8f66af8ff4945f41df.min.css" rel="stylesheet"></head>
 
 <body>
     {% include navbar.html %}
@@ -20,7 +20,7 @@
             </div>
             <div class="d-flex flex-column align-items-center col-sm-11 col-md-8 col-lg-7 d-flex flex-column justify-content-center mx-auto hero-content shadow bg-white rounded p-3">
                 <h1 class="text-center section-header underline">{{page.title}}</h1>
-                <p class="lead pt-3 px-3">{{page.description | smartify | markdownify | newline_to_br | replace: "<p>" |
+                <p class="lead pt-3 px-3">{{page.description | smartify | markdownify | replace: "<p>" |
                         replace: "</p>"}}</p>
                     {% if page.url == "/program-categories/college-scholarship.html" %}
                     <div class="d-flex justify-content-center w-100">
