--- a/root/jekyll/_layouts/events-layout.html
+++ b/root/jekyll/_layouts/events-layout.html
@@ -3,7 +3,7 @@
 
 <head>
     {% include collection-head.html %}
-<link href="../site.94ead76b301319ea20ae.min.css" rel="stylesheet"></head>
+<link href="../site.ff66136f03b6c3df478b.min.css" rel="stylesheet"></head>
 
 <body>
     {% include navbar.html %}
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 {% endif %}
-                {% if page.address and page.location and page.time %}
+                {% if page.address or page.location or page.time %}
                 <div class="row py-3">
                     <div class="col-sm-12">
                         <h2 class="section-header">Details</h2>
