--- a/root/src/templates/events-layout.tmpl.html
+++ b/root/src/templates/events-layout.tmpl.html
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 {% endif %}
-                {% if page.address and page.location and page.time %}
+                {% if page.address or page.location or page.time %}
                 <div class="row py-3">
                     <div class="col-sm-12">
                         <h2 class="section-header">Details</h2>
