--- a/root/src/templates/events-layout.tmpl.html
+++ b/root/src/templates/events-layout.tmpl.html
@@ -21,7 +21,11 @@
                 </div>
                 {% endif %}
                 <div class="d-flex justify-content-center align-items-center">
-                    <p class="my-1">{{ page.start_date | date: "%a, %b %d, %Y" }}</p>
+                    {% if page.shortDate %}
+                        <p class="my-1">{{ page.start_date | date: "%b %Y" }}</p>
+                    {% else %}
+                        <p class="my-1">{{ page.start_date | date: "%a, %b %d, %Y" }}</p>
+                    {% endif %}
                     {% if page.end_date and page.end_date != "" and page.end_date != "Invalid date" %}
                     &nbsp; &ndash; &nbsp;
                     <p class="my-1">{{ page.end_date | date: "%a, %b %d, %Y" }}</p>
@@ -90,7 +94,7 @@
                     </div>
                 </div>
                 {% endif %}
-                {% if page.address or page.location or page.time %}
+                {% if page.address or page.location or page.time and page.dontShowDetails != true %}
                 <div class="row py-3">
                     <div class="col-sm-12">
                         <h2 class="section-header">Details</h2>
