--- a/root/jekyll/_layouts/events-layout.html
+++ b/root/jekyll/_layouts/events-layout.html
@@ -3,7 +3,7 @@
 
 <head>
     {% include collection-head.html %}
-<link href="../site.81cf63aa7271799b72cd.min.css" rel="stylesheet"></head>
+<link href="../site.f3950fd52547ebc9d5ea.min.css" rel="stylesheet"></head>
 
 <body>
     {% include navbar.html %}
@@ -165,6 +165,7 @@
                         <p>For more information, please contact:</p>
                         <div class="card bg-light">
                             <div class="card-body">
+                                {% if page.contact.name != null %}
                                 {% assign nameArray = page.contact.name | split: " " %}
                                 {% assign firstLetter =
                                     nameArray | first | slice: 0 %}
@@ -185,6 +186,7 @@
                                         {% endif %}
                                     </div>
                                 </div>
+                                {% endif %}
                                 {% if page.contact.phone != null%}
                                 <div class="d-flex py-1">
                                     <div>
